<resources>
    <string name="app_name">Klipsch PSD Config Tool</string>
    <string name="action_settings">Settings</string>
    <string name="item_1">This is a test</string>
    <string name="enter_length"> Please enter the length of the room:</string>
    <string name="enter_width">Please enter the width of the room:</string>
    <string name="enter_height">Please enter the height of the room:</string>
    <string name="edit_length">Length</string>
    <string name="edit_width">Width</string>
    <string name="edit_height">Height</string>
    <string name="btnCal">Calculate</string>
    <string name="btnReset">Reset</string>
    <string name="editHint">10</string>
    <string name="contactPro">Please contact Promedia design at Klipsch</string>

    <!--result activity strings-->
        <string name="totalSpeaker">Total speakers:</string>
        <string name="totalPlaceHolder">0</string>


    <!--string arrays-->

    <string-array name="speakerSelect">
        <item>Please select a speaker</item>
        <item>SLM-5400-C</item>
        <item>PRO-160RPC</item>
        <item>PRO-180RPC</item>
        <item>CDT-5800-C II</item>
        <item>CDT-5650-C II</item>
        <item>R-1650-C</item>
    </string-array>


    <string-array name="spinLengthArray">
        <item>Length</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
    </string-array>

    <string-array name="spinWidthArray">
        <item>Width</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
    </string-array>

</resources>